Fixed a bug thats been BUGGING me for a while, like my 1:04 am pun?
Basically if a title was too long it would try to center everything in history, which looked ugly. and cropped some stuff. Might make it say ... if something is too long in the future.
E.G. LINK.THAT.IS.WAYYYYYYYYYYY.TOO.LONG.TO.DISPLAY.ON.A/CHROMEBOOK
becomes:
LINK.THAT.IS.WAYYY...

--- a/public/scss/history.scss
+++ b/public/scss/history.scss
@@ -7,10 +7,6 @@
 
 html, body {
     background-color: var(--debugBg);
-    display: flex;
-    justify-content: left;
-    flex-direction: column;
-    align-items: center;
     margin: 0;
     font-size: 1.75vh;
     font-family: "Open Sans";
@@ -27,6 +23,9 @@ html, body {
 
 .historyTitle {
     font-size: 3vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     justify-content: left;
     padding-left: calc(var(--padding) / 2);
     padding-top: calc(var(--padding) / 2);
@@ -34,18 +33,27 @@ html, body {
 }
 
 .historySeparator {
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
     display: block;
     background-color: var(--borderCol);
     padding: 0;
     margin: 0;
     margin-top: 0.25em;
     margin-bottom: 5.5vh;
+    margin-left: calc((100vw - (100vw - var(--padding) * 4)) / 2);
     width: calc(100vw - var(--padding) * 4);
     height: var(--borderThickness);
 }
 
 .history-wipe {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
     top: 6.5vh;
     width: 80vw;
     height: 5vh;
@@ -79,10 +87,11 @@ html, body {
 }
 
 .history-entry {
+    transform: translateY(1vh);
     margin: 10px;
     padding: 5px;
-    transform: translateX(-15vw);
     margin-left: var(--padding);
+    left: 0 !important;
 }
 
 .history-query {
